@@ -22,6 +22,7 @@
 		- Add Random Forests algorithm for ensemble learning using CART [Parijat Mazumdar] 
 		- Add Restricted Botlzmann Machines [Khaled Nasr]
 		- Add Stochastic Gradient Boosting algorithm for ensemble learning [Parijat Mazumdar]
+		- Add Deep contractive and denoising autoencoders [Khaled Nasr]
 	* Bugfixes:
 		- Fix reference counting bugs in CList when reference counting is on [Heiko Strathmann, Thoralf Klein, lambday]
 		- Fix memory problem in PCA::apply_to_feature_matrix [Parijat Mazumdar]
